fixed a couple bugs, removed branding
git-svn-id: https://django-facebookconnect.googlecode.com/svn/trunk/django-facebookconnect@4 d97e381e-1fac-11de-a7a1-25a91d9625e5

--- a/facebookconnect/templates/facebook/js.html
+++ b/facebookconnect/templates/facebook/js.html
@@ -1,6 +1,6 @@
 <script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
 <script type="text/javascript">
-    FB_RequireFeatures(["XFBML"], function() {FB.Facebook.init("{{ facebook_api_key }}", "{{ url facebook_xd_receiver }}")});
+    FB_RequireFeatures(["XFBML"], function() {FB.Facebook.init("{{ facebook_api_key }}", "{% url facebook_xd_receiver %}")});
 
     function facebookConnect(loginForm) {
         FB.Connect.requireSession();
