--- a/facebookconnect/templates/facebook/setup.html
+++ b/facebookconnect/templates/facebook/setup.html
@@ -9,7 +9,7 @@
   <div style="float:left;margin:0 .4em .4em 0">{% show_facebook_photo user %}</div>
   <h2>{% show_facebook_greeting user %}</h2>
   <div class="clear"></div>
-  <p>If you already have an account with MyGiftster, enter your username and password below to link your MyGifster account and all your lists and groups with your facebook account. If you do not already have a MyGiftster account, click Continue with facebook only - you won't have to remember a name and password for MyGiftster.</p>
+  <p>If you already have an account, enter your username and password below to link your account and all your lists and groups with your facebook account. If you do not already have an account, click Continue with facebook only - you won't have to remember a name and password.</p>
   
   {% if form.errors %}
   <p class="error">Your username and password didn't match. Please try again.</p>
