--- a/facebookconnect/templates/facebook/setup.html
+++ b/facebookconnect/templates/facebook/setup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load facebook %}
+{% load facebook_tags %}
 {% block content %}
 <div class="center-box center-only">
 <div class="box-top">
