advanced to v0.2 - reworked middleware to better handle logout conditions, bug fixes on new style facebookprofile model, bug fixes on 'next' handling ALPHA
git-svn-id: https://django-facebookconnect.googlecode.com/svn/trunk/django-facebookconnect@44 d97e381e-1fac-11de-a7a1-25a91d9625e5

--- a/facebookconnect/templates/facebook/connect_button.html
+++ b/facebookconnect/templates/facebook/connect_button.html
@@ -1,5 +1,5 @@
 {% load facebook_tags %}{% filter js_string %}
-<form class="connect-button" name="login" method="post" action="{% url facebook_login %}">
+<form class="connect-button" name="facebookconnect-login-form" id="facebookconnect-login-form" method="post" action="{% url facebook_login %}">
     {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
     {% endif %}
